--- a/dev/less/inc/footer.less
+++ b/dev/less/inc/footer.less
@@ -1,3 +1,18 @@
-h3{
-	background-color: blue;
+footer{
+	p{
+		margin: 0;
+		width: 50%;
+		display: inline-block;
+
+		@media only screen and (max-width:520px){
+			display: none;
+		}
+
+	}
+	img{
+		display: inline-block;
+		float: right;
+		@media only screen and (max-width:520px){
+	}
+}
 }
