--- a/dev/less/inc/main.less
+++ b/dev/less/inc/main.less
@@ -1,8 +1,11 @@
+
 body {
 	background: #f7f7f7;
 	margin: 0;
 	padding: 0;
 	font-family: "Bree Serif", sans-serif;
+	background: url(/images/back.jpg);
+
 }
 .container {
 	width: 960px;
@@ -31,4 +34,94 @@ body {
 	@media only screen and (min-width: 720px) {
 		display: none;
 	}
+}
+.main{
+	max-width: 960px;
+	margin: 0 auto;
+}
+		.main-text{
+			display: inline-block;
+				width: 50%;
+				position: relative;
+					
+				}
+				h1{
+					width: 80%;
+					margin:40px auto;
+					color: #5a9e61;
+					font-size:24px;
+					font-weight: normal;	
+				}
+				p{
+					color: #333;
+					font-family: 'Open Sans';
+					width: 80%;
+					margin: 20px auto;
+					font-weight: 400;
+					a{
+						color: #5a9e61;
+						font-weight: 600;
+					}
+
+					
+				}
+				span.more{
+					background: #53a665;
+					padding: 2px 20px;
+					color: #fff;
+					position: absolute;
+					bottom: -6px;
+					right: 30px;
+					margin: 2px;
+
+				}	
+				.main-text-down{
+	width: 100%;
+
+}
+.main-container{
+		.main-text-up{
+			@media only screen and (max-width: 940px) {
+		display: none;
+		}
+		}
+		.main-text-down{
+			@media only screen and (min-width: 940px) {
+		display: none;
+		width: 100%;
+		}
+		}
+}					
+.main-video{
+	display: inline-block;
+	width: 49%;
+		video{
+			width: 100%;
+		}
+}
+.main{
+	.main-video	{
+	@media only screen and (max-width: 940px) {
+		display:block;
+		width: 70%;
+		margin: 10px auto;
+		}
+}
+}
+.footer-main{
+	.content-main{
+		display: inline-block;
+		width: 33%;
+		text-align: center;
+		position: relative;
+		margin: 40px 0;
+		span.more{
+			position: static;		
+		}
+			@media only screen and (max-width: 840px) {
+		display: block;
+		width: 100%;
+	}
+
+}
 }
